<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>tka-gln</groupId>
	<artifactId>myGalen</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<dependencies>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.10</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.galenframework</groupId>
			<artifactId>galen-java-support</artifactId>
			<version>2.3.5</version>
		</dependency>

		<!-- matcher framework -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
	</dependencies>



	<build>

		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.17</version>

				<configuration>

					<suiteXmlFiles>
						<suiteXmlFile>testng.xml</suiteXmlFile>
					</suiteXmlFiles>


					<properties>
						<property>
							<name>usedefaultlisteners</name>
							<value>false</value>
						</property>
						<property>
							<name>listener</name>
							<value>com.galenframework.testng.GalenTestNgReportsListener</value>
						</property>
						<property>
							<name>surefire.testng.verbose</name>
							<value>10</value>
						</property>

					</properties>

					<systemProperties>
						<property>
							<name>browser</name>
							<value>${browser}</value>
						</property>
						<property>
							<name>webdriver.chrome.driver</name>
							<value>${webdriver.chrome.driver}</value>
						</property>
						<property>
							<name>webdriver.gecko.driver</name>
							<value>${webdriver.gecko.driver}</value>
						</property>
					</systemProperties>
					
				</configuration>

				<!-- <artifactId>maven-surefire-plugin</artifactId> <configuration> <suiteXmlFiles> 
					<suiteXmlFile>test-suite/testng.xml</suiteXmlFile> </suiteXmlFiles> <argLine>-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar 
					-Xmx1024m -XX:MaxPermSize=512m -Xms256m -Xmx1024m -XX:PermSize=128m -Dversion=${project.version} 
					</argLine> <systemPropertyVariables> <foo>${foo.value}</foo> </systemPropertyVariables> 
					<environmentVariables> <bar>${bar.value}</bar> </environmentVariables> </configuration> -->




			</plugin>

		</plugins>

	</build>

	<profiles>
		<profile>
			<id>t_cr</id>
			<properties>
				<browser>chrome</browser>
			</properties>

		</profile>

		<profile>
			<id>t_ff</id>
			<properties>
				<browser>firefox</browser>
			</properties>
		</profile>
	</profiles>

	<properties>
		<webdriver.gecko.driver>/Users/Olena/Documents/Projekte/JAVA/geckodriver</webdriver.gecko.driver>
		<webdriver.chrome.driver>/Users/Olena/Documents/Projekte/JAVA/chromedriver</webdriver.chrome.driver>
	</properties>


</project>